fix control format economic